# game-website-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.gradle.kts  docker_commands.sh  fly.toml  gradle.properties  settings.gradle.kts
.github/workflows/: fly.yml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
prisma/migrations/20230628044152_test_migration/: migration.sql
prisma/migrations/20230628061736_add_side_enum/: migration.sql
prisma/migrations/20230628192353_simplify_game_table/: migration.sql
prisma/migrations/20230628192457_fix_nullable_columns/: migration.sql
prisma/migrations/20230628192916_remove_player_ids/: migration.sql
prisma/migrations/20230628194106_make_player_times_options/: migration.sql
prisma/migrations/20230629070241_add_columns_for_rating_range/: migration.sql
prisma/migrations/20230629210035_add_player_table/: migration.sql
prisma/migrations/20230629210754_make_start_pos_optional/: migration.sql
prisma/migrations/20230630213529_update_user_table/: migration.sql
prisma/migrations/20230703183004_test_new_tables/: migration.sql
prisma/migrations/20230930182401_baseline/: migration.sql
scripts/: docker_commands.sh  fix_prisma_str.sh
src/: app_config.rs  common.rs  hourglass.rs  lib.rs  lumber_mill.rs  main.rs  models.rs  player_stats.rs  prisma.rs  sse.rs
src/handlers/: game.rs  games.rs  mod.rs  moves.rs  sse.rs  user.rs
src/handlers/game/: add_move.rs  cancel_game.rs  create_game.rs  get_all_games.rs  get_game.rs  get_lobbies.rs  join_game.rs  mod.rs  offer_draw.rs  offer_rematch.rs  resign.rs  send_chat.rs  timeout.rs
src/handlers/sse/: mod.rs  new_game_client.rs  new_lobby_client.rs  new_user_client.rs
src/handlers/user/: challenge_request.rs  create_guest.rs  create_user.rs  friend_request.rs  get_conversations.rs  get_current_user.rs  get_user.rs  login.rs  logout.rs  mod.rs  send_message.rs  unfriend.rs  update_preferences.rs  update_profile.rs
src/helpers/: challenge.rs  conversation.rs  create_game.rs  create_user.rs  enums.rs  game.rs  general.rs  mod.rs  model_defaults.rs  perf.rs  preferences.rs  user.rs  user_message.rs
src/helpers/move_validation/: mod.rs  ttt.rs
src/helpers/moves/: c4.rs  mod.rs  ttt.rs  uttt.rs  wrapper.rs
src/main/kotlin/com/example/: Application.kt  GameManager.kt  GameStateManager.kt  TicTacToe.kt  UltimateTicTacToe.kt
src/main/kotlin/com/example/plugins/: Routing.kt
src/models/: builders.rs  events.rs  game.rs  general.rs  mod.rs  models.rs  req.rs  res.rs
src/models/helpers/: create_game.rs  create_user.rs  game.rs  general.rs  mod.rs  user.rs
src/test/kotlin/com/example/: ServerTest.kt
tests/: check_board_tests.rs
