[package]
name = "game-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["prisma-cli"]

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.19"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", default-features = false, features = ["postgresql"] }
derive_more = "0.99.17"
serde_json = "1.0.99"
actix-cors = "0.6.4"
actix-session = { version = "0.7.2", features = ["redis-rs-session", "redis-rs-tls-session"] }
bcrypt = "0.14.0"
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
nanoid = "0.4.0"
