[package]
name = "game-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["prisma-cli"]

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
actix-session = { version = "0.8.0", features = ["redis-rs-session", "redis-rs-tls-session"] }
actix-multipart = "0.6.1"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", default-features = false, features = ["postgresql"] }
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
log = "0.4.19"
rand = "0.8.5"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
bcrypt = "0.15.0"
tokio = { version = "1.29.1", features = ["full"] }
futures = "0.3.28"
nanoid = "0.4.0"
dotenv = "0.15.0"
strum = "0.25.0"
strum_macros = "0.25.1"
parking_lot = "0.12.1"
glicko_2 = "1.0.0"
sentry = { version = "0.32.0", features = ["tracing"] }
sentry-actix = "0.32.0"
aws-config = "1.1.1"
aws-sdk-s3 = "1.8.0"
